<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_color"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/navBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themecolor"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        android:visibility="visible"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/title_color"
            android:text="@string/logo"/>

        <RelativeLayout
            android:id="@+id/rlLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/txtEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="#ffffff"
                android:textSize="@dimen/title_font_size"

                />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="#ffffff"
                android:visibility="gone"
                android:textSize="@dimen/title_font_size"

                />



        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_20"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10"
        android:weightSum="2.5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textColor="@color/black_color"
            android:layout_marginLeft="@dimen/margin_10"
            android:textSize="@dimen/text_16sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txtLogoCount"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textColor="@color/black_color"
            android:text="@string/empty"
            android:layout_margin="@dimen/margin_5"
            android:textSize="@dimen/text_16sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txtNewLogo"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textColor="#795548"
            android:layout_marginLeft="@dimen/margin_10"
            android:textSize="@dimen/text_16sp"
            android:text="@string/new_pic"/>


        <TextView
            android:id="@+id/txtLogoSelect"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textColor="#795548"
            android:layout_marginLeft="@dimen/margin_10"
            android:textSize="@dimen/text_16sp"
            android:text="@string/select_pic"/>


        <TextView
            android:id="@+id/txtLogoDelete"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_color"
            android:layout_marginLeft="@dimen/margin_10"
            android:textSize="@dimen/text_16sp"
            android:text="@string/delete_pic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@color/dark_gray_color"
        android:orientation="vertical"
        android:weightSum="1">

        <!--  <android.support.v7.widget.RecyclerView
            android:id="@+id/rvImageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            >


        </android.support.v7.widget.RecyclerView>-->

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.90"
            android:layout_margin="@dimen/margin_30" />


        <TextView
            android:id="@+id/txtLogoHint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_20"
            android:layout_weight="0.10"
            android:gravity="center"
            android:text="@string/logo_hint"
            android:textColor="@color/black_color" />

    </LinearLayout>

</LinearLayout>