<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color"
    >

    <RelativeLayout
        android:id="@+id/navBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themecolor"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginTop="@dimen/margin_5"
            android:src="@drawable/ic_back"
            android:padding="2dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/title_color"
            android:text="@string/surveying"/>

    </RelativeLayout>

    <TextView
        android:layout_marginTop="@dimen/margin_15"
        android:padding="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/black_color"
        android:text="@string/surveying"/>

    <LinearLayout
        android:id="@+id/llEstimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_10">

        <TextView
            android:layout_marginTop="@dimen/margin_30"
            android:padding="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/black_color"
            android:text="@string/estimation"/>

        <TextView
            android:id="@+id/tvEstimation"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black_color"
            android:text="@string/estimation_surveying"/>

        <View
            android:id="@+id/vwSeperator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e3e3e3"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_30"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/llSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_10">

        <TextView
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/black_color"
            android:text="@string/section"/>

        <TextView
            android:id="@+id/tvSection"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black_color"
            android:text="@string/section_surveying"/>

        <View
            android:id="@+id/vwSeperator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e3e3e3"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_30"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llLogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_10">

        <TextView
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="@color/black_color"
            android:text="@string/logs"/>

        <TextView
            android:id="@+id/tvLogs"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/black_color"
            android:text="@string/logs_surveying"/>

        <View
            android:id="@+id/vwSeperator2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e3e3e3"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_30"/>

    </LinearLayout>


</LinearLayout>